--- a/vagamiga/frontend/package.json
+++ b/vagamiga/frontend/package.json
@@ -9,11 +9,8 @@
     "@hookform/resolvers": "^5.1.1",
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
+    "@mui/system": "^7.1.1",
     "@mui/x-date-pickers": "^8.5.3",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.1.0",
-    "@testing-library/user-event": "^13.2.1",
     "@types/yup": "^0.32.0",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
@@ -54,6 +51,9 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.27.4",
+    "@babel/plugin-syntax-flow": "^7.27.1",
+    "@babel/plugin-transform-react-jsx": "^7.27.1",
     "@types/react": "^19.1.3",
     "@types/react-dom": "^19.1.3",
     "@types/react-router-dom": "^5.3.3",
